--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -1,2 +1,11 @@
 server:
   port: 8080
+
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/squamish
+    username: root
+    password: root
+    driver-class-name: org.postgresql.Driver
+  flyway:
+    enabled: true
