--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -3,9 +3,12 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/squamish
-    username: root
-    password: root
+    url: jdbc:postgresql://localhost:5444/surf_db
+    username: postgres
+    password: revan12345
     driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: validate
   flyway:
     enabled: true
