--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -11,6 +11,9 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
+    show-sql: true
+    properties:
+      hibernate.format_sql: true
   flyway:
     enabled: true
 springdoc:
