enhance build stage, add run configuration and remove secrets from application-prod.yml for auth service

--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -1,3 +1,3 @@
-FROM amazoncorretto:19-alpine AS run
-COPY build/libs/auth-*-SNAPSHOT.jar /usr/local/lib/app.jar
+FROM amazoncorretto:17-alpine AS run
+COPY build/libs/*-SNAPSHOT.jar /usr/local/lib/app.jar
 ENTRYPOINT ["java","-Xms32m","-Xmx500m","-jar","/usr/local/lib/app.jar"]
