--- a/auth/src/main/resources/application-prod.yml
+++ b/auth/src/main/resources/application-prod.yml
@@ -1,13 +1,13 @@
 server:
-  port: ${PORT:8085}
+  port: ${PORT}
 
 keycloak:
-  host: ${KEYCLOAK_HOST:localhost:8888}
+  host: ${HOST}
   realm: studyjam
-  certs-id: K8aUK_QgRhBJ1mqLCXn5skBShc5PSY1lsLeKZyYboYE
+  certs-id: ${KEYCLOAK_CERTS}
   client-id: spring
   client-grant-type: client_credentials
-  client-secret: mjnoLPMym2ZFSkKRKXDV3vnF7yENMKTR
+  client-secret: ${KEYCLOAK_SECRET}
   user-grant-type: password
 
   certs-url: http://${keycloak.host}/auth/realms/${keycloak.realm}/protocol/openid-connect/certs
@@ -15,3 +15,14 @@ keycloak:
   user-info-url: http://${keycloak.host}/auth/realms/${keycloak.realm}/protocol/openid-connect/userinfo
   users-url: http://${keycloak.host}/auth/admin/realms/${keycloak.realm}/users
   reset-password-url: http://${keycloak.host}/auth/admin/realms/${keycloak.realm}/users/{sub}/reset-password
+
+spring:
+  datasource:
+    url: jdbc:postgresql://${DB_HOST}/{$DB_NAME}
+    username: {$DB_USER}
+    password: {$DB_PASSWORD}
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: update
