--- a/auth/src/main/resources/application-prod.yml
+++ b/auth/src/main/resources/application-prod.yml
@@ -18,9 +18,9 @@ keycloak:
 
 spring:
   datasource:
-    url: jdbc:postgresql://${DB_HOST}/{$DB_NAME}
-    username: {$DB_USER}
-    password: {$DB_PASSWORD}
+    url: jdbc:postgresql://${DB_HOST}/${DB_NAME}
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
