--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -16,6 +16,18 @@ spring:
       hibernate.format_sql: true
   flyway:
     enabled: true
+  kafka:
+    producer:
+      bootstrap-servers: localhost:9092,localhost:9093
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      acks: all
+      client-id: service-core
+
+
 springdoc:
   swagger-ui:
     enabled: true
+
+authService:
+  credentialsServiceApi: http://localhost:8085/credentialsServiceApi
