TASK-90 Fix kafka issues (#29)
Изменение конфигурации кластера: 1 брокер, 1 зукипер.
Упрощение параметров кафки, рефакторинг продьюсера.

--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -23,6 +23,8 @@ spring:
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       acks: all
       client-id: service-core
+      properties:
+        spring.json.add.type.headers: false
 
 
 springdoc:
