TASK-250 Fix consumer offsets topic issues (#31)
Добавление параметра репликации 1 для топика __consumer_offsets вместо дефолтных 3

--- a/core/docker-compose.yml
+++ b/core/docker-compose.yml
@@ -44,6 +44,7 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_MIN_INSYNC_REPLICAS: 1
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     volumes:
       - kafka:/var/lib/kafka/data
 
