--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
     enabled: true
   kafka:
     producer:
-      bootstrap-servers: localhost:9092,localhost:9093
+      bootstrap-servers: localhost:9092
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       acks: all
