--- a/core/src/main/resources/application-dev.yml
+++ b/core/src/main/resources/application-dev.yml
@@ -24,3 +24,6 @@ springdoc:
 
 authService:
   credentialsServiceApi: http://localhost:8085/credentialsServiceApi
+
+externalFiles:
+  s3FileServiceApi: http://localhost:8081/api/s3FileServiceApi
