--- a/external-files/src/main/resources/application-dev.yml
+++ b/external-files/src/main/resources/application-dev.yml
@@ -13,7 +13,7 @@ s3:
 spring:
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:file:./core_db;DB_CLOSE_DELAY=-1
+    url: jdbc:h2:file:./ext_db;DB_CLOSE_DELAY=-1
     username: sa
     password: sa
   jpa:
