--- a/auth/src/main/resources/application-dev.yml
+++ b/auth/src/main/resources/application-dev.yml
@@ -1,13 +1,13 @@
 server:
-  port: ${PORT:8085}
+  port: 8085
 
 keycloak:
-  host: ${KEYCLOAK_HOST:localhost:8888}
+  host: localhost:8888
   realm: studyjam
   certs-id: K8aUK_QgRhBJ1mqLCXn5skBShc5PSY1lsLeKZyYboYE
   client-id: spring
-  client-grant-type: client_credentials
   client-secret: mjnoLPMym2ZFSkKRKXDV3vnF7yENMKTR
+  client-grant-type: client_credentials
   user-grant-type: password
 
   certs-url: http://${keycloak.host}/auth/realms/${keycloak.realm}/protocol/openid-connect/certs
@@ -26,5 +26,6 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
+    show-sql: true
   h2:
     console.enabled: true
