--- a/core/src/main/resources/application-prod.yml
+++ b/core/src/main/resources/application-prod.yml
@@ -1,24 +1,27 @@
 server:
-  port: 8080
+  port: ${PORT}
   servlet:
     context-path: /api
+
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5444/surf_db
-    username: postgres
-    password: revan12345
+    url: jdbc:postgresql://${DB_HOST}/${DB_NAME}
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
   jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate.format_sql: true
   flyway:
     enabled: true
+    locations: db/migration/core
   kafka:
     producer:
-      bootstrap-servers: localhost:9092
+      bootstrap-servers: ${KAFKA_HOST}
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       acks: all
@@ -26,13 +29,12 @@ spring:
       properties:
         spring.json.add.type.headers: false
 
-
 springdoc:
   swagger-ui:
     enabled: true
 
 authService:
-  credentialsServiceApi: http://localhost:8085/credentialsServiceApi
+  credentialsServiceApi: ${AUTH_API}
 
 externalFiles:
-  s3FileServiceApi: http://localhost:8081/api/s3FileServiceApi
+  s3FileServiceApi: ${EXI_FILES_API}
