TASK-72 spring cloud routing
- integrate UI with backend via spring cloud gateway
- minor fix docker compose, run configurations and core db schema

--- a/api-gateway/src/main/resources/application-dev.yml
+++ b/api-gateway/src/main/resources/application-dev.yml
@@ -8,5 +8,19 @@ management:
 
 application:
   ports:
-    service-core-port: http://localhost:8080/
-    external-files-port: http://localhost:8081/
+    service-core-port: http://localhost:8080
+    external-files-port: http://localhost:8081
+
+spring:
+  application:
+    name: API-GATEWAY
+  cloud:
+    gateway:
+      default-filters:
+        - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
+      globalcors:
+        corsConfigurations:
+          '[/**]':
+            allowedOrigins: "*"
+            allowedMethods: "*"
+            allowedHeaders: "*"
