TASK-253 Refactor kafka logic in service core (#34)
TASK-253 Refactor kafka logic in service core

Рефакторинг логики связанной с кафкой

--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -101,7 +101,7 @@ services:
       kafka-topics --bootstrap-server kafka-service:29092 --list
       
       echo -e 'Creating kafka topics on broker...'
-      kafka-topics --bootstrap-server kafka-service:29092 --create --if-not-exists --topic notification-topic --replication-factor 1 --partitions 3
+      kafka-topics --bootstrap-server kafka-service:29092 --create --if-not-exists --topic receiving-request-topic --replication-factor 1 --partitions 3
       
       echo -e 'Successfully created the following topics:'
       kafka-topics --bootstrap-server kafka-service:29092 --list
